# testsystem

./: .gitignore  CMakeLists.txt
src/: TestingApp.cpp
src/converter/: Converter.cpp  Converter.h
src/helpers/: FileReader.cpp  FileReader.h
src/model/: Question.cpp  Test.cpp  Test.h
src/tests/: test1.tst
src/widgets/: MainWindow.cpp  MainWindow.h  QuestionWidget.cpp  QuestionWidget.h  TestList.cpp  TestList.h  wx_include.h
test/: CMakeLists.txt  Test1.cpp
